# repartee

./: .gitignore  .pypirc  CLAUDE.md  README.md  SECURITY.md  hello.py  litellm_documentation.txt  pyproject.toml  repartee.code-workspace  requirements.txt  setup.py
config/: api_keys.yaml  settings.yaml
dev/: api.py  scrape.py  terminal_gui.py  tui.py
dev/.drafts/: README.old.md
dev/.obsidian/: workspace.json
dev/notes/: Project canvas.canvas  embedding.md  model names and prices.md
dev/notes/.obsidian/: workspace.json
dev/project_files/: project_file_o1.md
dev/project_files/.obsidian/: app.json  workspace.json
developping/: terminal-emulator-in-textual.py  terminal_gui.py
docs/: ANALYSIS_RESULTS.md  IMPLEMENTATION_ROADMAP.md  NEXT_ACTIONS.md  PROJECT_ANALYSIS.md  REFERENCE_SPEC.md  ROADMAP.md  STRATEGIC_POSITIONING.md  SUMMARY.md  dear_claude_code.md
docs/.obsidian/: workspace.json
docs/dev/canvases/: _project_structure.canvas
docs/dev/prompts/: pp_2024-05-27.md
docs/resources/code/drafts/: terminal-emulator-in-textual.py
project_files/: model names and prices.md
project_files/html/: Embeddings - OpenAI API.html  Question answering using embeddings-based search OpenAI Cookbook.html
project_files/prompts/: pp_2024-06-05.md
project_prompts/: pp_2024-05-27.md
repartee/: api.py  repartee.tcss  tui.py  tui2.py
repartee/api_clients/: openai.py  openai_api.py
src/: api_caller.py  config_manager.py  main.py  output_formatter.py  prompt_handler.py  search_util.py  shell_commands.py  spending_tracker.py
src/repartee/: __init__.py  __main__.py  config.py  main.py  mcp_server.py  utils.py
src/repartee/mcp/: __init__.py  client.py  host.py  protocol.py
src/repartee/memory/: __init__.py  chat_history.py  episodic_memory.py  rag.py  semantic_memory.py  short_term_memory.py  working_memory.py
src/repartee/models/: anthropic_models.py  google_models.py  openai_models.py  perplexity_models.py
src/repartee/prompts/: __init__.py  role.py
src/repartee/tests/: test_tool_models_anthropic.py  test_tool_models_openai.py  test_tool_models_perplexity.py  test_tools_models_gemini.py
src/repartee/tools/: __init__.py
src/repartee/tools/models/: __init__.py  anthropic_models.py  google_models.py  openai_models.py
src/repartee/ui/: cli.py  repl.py
