[project]
name = "repartee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.3.7",
    "aiohttp==3.10.4",
    "aiosignal==1.3.1",
    "anthropic>=0.37.1",
    "attrs==24.2.0",
    "click==8.1.7",
    "frozenlist==1.4.1",
    "google-generativeai>=0.8.3",
    "idna==3.7",
    "linkify-it-py==2.0.3",
    "litellm>=1.51.1",
    "markdown-it-py==3.0.0",
    "mdit-py-plugins==0.4.1",
    "mdurl==0.1.2",
    "msgpack==1.0.8",
    "multidict==6.0.5",
    "openai>=1.53.0",
    "prompt-toolkit==3.0.47",
    "pygments==2.18.0",
    "pyte==0.8.2",
    "requests>=2.32.3",
    "rich==13.7.1",
    "textual-dev==1.5.1",
    "textual-terminal==0.3.0",
    "textual==0.76.0",
    "typing-extensions==4.12.2",
    "uc-micro-py==1.0.3",
    "wcwidth==0.2.13",
    "yarl==1.9.4",
]

[project.scripts]
repartee = "repartee:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
